include $(top_srcdir)/config/automake.common

subdocdir = $(docdir)/gif
subdoc_DATA = \
./aggregation.gif\
./architecture.gif\
./association.gif\
./composante.gif\
./equivalence.gif\
./etude.gif\
./famille.gif\
./heritage.gif\
./hexaedres.gif\
./hexaedre2.gif\
./maillage.gif\
./maille_0D.gif\
./maille_1D.gif\
./maille_2D.gif\
./maille_3D.gif\
./maille.gif\
./noeud.gif\
./pentaedres.gif\
./penta18.svg\
./profil.gif\
./pyramides.gif\
./quadrangles.gif\
./quadrangle2.gif\
./resultat.gif\
./segments.gif\
./segment2.gif\
./tetraedres.gif\
./triangles.gif\
./triangle2.gif\
./octaedre.gif\
./MED.gif\
./composition.gif\
./face.gif\
./arete.gif\
./cas_utilisation_med.gif\
./architecture_fonctionnelle.gif\
./architecture_fonctionnelle_detaillee.gif\
./architecture_technique.gif\
./guide_utilisation.gif

EXTRA_DIST = \
./aggregation.gif\
./architecture.gif\
./association.gif\
./composante.gif\
./equivalence.gif\
./etude.gif\
./famille.gif\
./heritage.gif\
./hexaedres.gif\
./hexaedre2.gif\
./maillage.gif\
./maille_0D.gif\
./maille_1D.gif\
./maille_2D.gif\
./maille_3D.gif\
./maille.gif\
./noeud.gif\
./pentaedres.gif\
./penta18.svg\
./profil.gif\
./pyramides.gif\
./quadrangles.gif\
./quadrangle2.gif\
./resultat.gif\
./segments.gif\
./segment2.gif\
./tetraedres.gif\
./triangles.gif\
./triangle2.gif\
./octaedre.gif\
./MED.gif\
./composition.gif\
./face.gif\
./arete.gif\
./cas_utilisation_med.gif\
./architecture_fonctionnelle.gif\
./architecture_fonctionnelle_detaillee.gif\
./architecture_technique.gif\
./guide_utilisation.gif

