include $(top_srcdir)/config/automake.common

subdocdir = $(docdir)/odt
subdoc_DATA = \
./exemple_connectivite_descendante_polyedres.png\
./exemple_connectivite+index_polygones2.png\
./exemple_connectivite_nodale_polyedres.png\
./exemple_connectivite_polygones2.png\
./exemple_connectivite_polygones.png\
./exemple_index_polygones2.png\
./MEDmeshnEntity.html

EXTRA_DIST = \
./exemple_connectivite_descendante_polyedres.png\
./exemple_connectivite+index_polygones2.png\
./exemple_connectivite_nodale_polyedres.png\
./exemple_connectivite_polygones2.png\
./exemple_connectivite_polygones.png\
./exemple_index_polygones2.png\
./MEDmeshnEntity.html
