include $(top_srcdir)/config/automake.common

subdocdir = $(docdir)/png
subdoc_DATA = \
./med.png						\
./types_de_base.png					\
./etude.png						\
./maillage.png						\
./dependances_sous_packages_maillage.png		\
./noeud.png						\
./maille.png						\
./maille_0D.png						\
./maille_1D.png						\
./maille_2D.png						\
./maille_3D.png						\
./face.png						\
./arete.png						\
./famille.png						\
./equivalence.png					\
./valeur_sur_entite.png					\
./sequence_de_calcul.png				\
./resultat.png						\
./profil.png						\
./classe.png						\
./variable_scalaire_numerique.png			\
./evolution_temporelle.png				\
./indexation_grille.png					\
./exemple_grille_cartesienne.png			\
./numerotation_grille.png				\
./exemple_numerotation_grille.png			\
./exemple_grille_cartesienne_coordonnees.png		\
./points_de_gauss_par_element.png			\
./association.png					\
./agregation.png					\
./composition.png					\
./heritage.png						\
./package.png						\
./code.png						\
./MED_fichier.png					\
./chainage.png						\
./exemple_connectivite_polygones.png			\
./exemple_gro2fam.png					\
./exemple_connectivite_descendante_polyedres.svg	\
./exemple_connectivite_nodale_polyedres.svg		\
./joint.png						\
./description-joint.png					\
./sous-domaines.png					\
./temp-vitesse.png					\
./UsesCase_MEDmesh_15_doc.png				\
./UsesCase_MEDmesh_13_doc.png				\
./Content_of_MAILLAGE.png                               \
./Content_of_ARETE.png					\
./Content_of_DEFINITION_TYPE.png			\
./Content_of_ELEMENT_DE_STRUCTURE.png			\
./Content_of_EQUIVALENCE.png				\
./Content_of_EVOLUTION_TEMPORELLE.png			\
./Content_of_Exemple_Repere_Cartesien_3D.png		\
./Content_of_Exemple_Repere_Cylindrique_3D.png		\
./Content_of_Exemple_Repere_Spherique_3D.png		\
./Content_of_FACE.png					\
./Content_of_FAMILLE.png				\
./Content_of_FICHIER.png				\
./Content_of_LOCALISATION_DES_POINTS_DE_GAUSS.png	\
./Content_of_MAILLE0D.png				\
./Content_of_MAILLE1D.png				\
./Content_of_MAILLE2D.png				\
./Content_of_MAILLE3D.png				\
./Content_of_MAILLE.png					\
./Content_of_NOEUD.png					\
./Content_of_PROFIL.png					\
./Content_of_RESULTAT.png				\
./Content_of_VALEURS_SUR_ENTITE.png			\
./Content_of_VALEUR_SUR_ENTITE.png			\
./Content_of_VARIABLE_SCALAIRE_NUMERIQUE.png

EXTRA_DIST = \
./med.png						\
./types_de_base.png					\
./etude.png						\
./maillage.png						\
./dependances_sous_packages_maillage.png		\
./noeud.png						\
./maille.png						\
./maille_0D.png						\
./maille_1D.png						\
./maille_2D.png						\
./maille_3D.png						\
./face.png						\
./arete.png						\
./famille.png						\
./equivalence.png					\
./valeur_sur_entite.png					\
./sequence_de_calcul.png				\
./resultat.png						\
./profil.png						\
./classe.png						\
./variable_scalaire_numerique.png			\
./evolution_temporelle.png				\
./indexation_grille.png					\
./exemple_grille_cartesienne.png			\
./numerotation_grille.png				\
./exemple_numerotation_grille.png			\
./exemple_grille_cartesienne_coordonnees.png		\
./points_de_gauss_par_element.png			\
./association.png					\
./agregation.png					\
./composition.png					\
./heritage.png						\
./package.png						\
./code.png						\
./MED_fichier.png					\
./chainage.png						\
./exemple_connectivite_polygones.png			\
./exemple_gro2fam.png					\
./exemple_connectivite_descendante_polyedres.svg	\
./exemple_connectivite_nodale_polyedres.svg		\
./joint.png						\
./description-joint.png					\
./sous-domaines.png					\
./temp-vitesse.png					\
./UsesCase_MEDmesh_15_doc.png				\
./UsesCase_MEDmesh_13_doc.png				\
./Content_of_MAILLAGE.png 				\
./Content_of_ARETE.png					\
./Content_of_DEFINITION_TYPE.png			\
./Content_of_ELEMENT_DE_STRUCTURE.png			\
./Content_of_EQUIVALENCE.png				\
./Content_of_EVOLUTION_TEMPORELLE.png			\
./Content_of_Exemple_Repere_Cartesien_3D.png		\
./Content_of_Exemple_Repere_Cylindrique_3D.png		\
./Content_of_Exemple_Repere_Spherique_3D.png		\
./Content_of_FACE.png					\
./Content_of_FAMILLE.png				\
./Content_of_FICHIER.png				\
./Content_of_LOCALISATION_DES_POINTS_DE_GAUSS.png	\
./Content_of_MAILLE0D.png				\
./Content_of_MAILLE1D.png				\
./Content_of_MAILLE2D.png				\
./Content_of_MAILLE3D.png				\
./Content_of_MAILLE.png					\
./Content_of_NOEUD.png					\
./Content_of_PROFIL.png					\
./Content_of_RESULTAT.png				\
./Content_of_VALEURS_SUR_ENTITE.png			\
./Content_of_VALEUR_SUR_ENTITE.png			\
./Content_of_VARIABLE_SCALAIRE_NUMERIQUE.png


